# VTC

./: .gitmodules  CITATION.bib  CITATION.cff  README.md  check_sys_dependencies.sh  evaluations.md  pyproject.toml  requirements.txt  run.sh  zensical.toml
.github/workflows/: docs.yml
docs/: getting-started.md  guide.md  index.md
docs/advanced/: finetuning.md  hpc.md  raw_outputs.md  thresholds.md
docs/assets/visualisations/: audio-annotations-player.html
docs/misc/: troubleshooting.md  versions.md
model/: best.ckpt  config.yml
scripts/: convert.py  infer.py  merge_segments.py  run.sh
src/vtc_inference/: __init__.py  __main__.py  cli.py  convert_audios.py  infer.py  ressources.py  utils.py
thresholds/: f1.toml  f1.yml  hp.toml  hp.yml
