[project]
name = "vtc"
version = "2.1.0"
description = "The inference code for the Voice Type Classifier model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyannote-audio>=3.4.0",
    "segma",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
segma = { git = "https://github.com/MarvinLvn/segma", rev = "81dc44327a18c77fe754839dbb2b28563ba3cfbb" }

[dependency-groups]
doc = [
    "zensical>=0.0.37",
]

[project.urls]
documentation = "https://docs.cognitive-ml.fr/fastabx"
