[project]
name = "vtc"
version = "2.2.0"
description = "The inference code for the Voice Type Classifier model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyannote-audio>=3.4.0",
    "segma",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
segma = { git = "https://github.com/MarvinLvn/segma", rev = "e6cebc5b232ac1a30554caa7ec35dd22057d07f0" }

[dependency-groups]
doc = [
    "zensical>=0.0.37",
]

[project.urls]
documentation = "https://docs.cognitive-ml.fr/fastabx"
